@@ -2,8 +2,9 @@
 
    * scripts/unique-kmers.py: use consume_fasta again.
    * khmer/_khmer.cc: expose output_records option on HLLCounter consume_fasta.
-   * lib/hllcounter.{cc,hh}: implement output_records in HLLCounter
-   consume_fasta, add utility function write_record.
+   * lib/hllcounter.{cc,hh}: implement output_records option in consume_fasta.
+   * lib/read_parsers.{cc,hh}: add Read method write_to, useful for outputting
+   the read to an output stream.
 
 2015-08-09  Jacob Fenton  <bocajnotnef@gmail.com>
 
